""" Builds keyboard_handler.
"""

load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_library")

ros2_cpp_library(
    name = "keyboard_handler",
    srcs = [
        "keyboard_handler/src/default_unix_key_map.cpp",
        "keyboard_handler/src/keyboard_handler_base.cpp",
        "keyboard_handler/src/keyboard_handler_unix_impl.cpp",
    ],
    hdrs = [
        "keyboard_handler/include/keyboard_handler/keyboard_handler.hpp",
        "keyboard_handler/include/keyboard_handler/keyboard_handler_base.hpp",
        "keyboard_handler/include/keyboard_handler/keyboard_handler_unix_impl.hpp",
        "keyboard_handler/include/keyboard_handler/visibility_control.hpp",
    ],
    includes = ["keyboard_handler/include"],
    visibility = ["//visibility:public"],
)
