""" Builds launch.
"""

load("@rules_python//python:defs.bzl", "py_library")
load("@rules_ros2_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "launch",
    srcs = glob(["launch/launch/**/*.py"]),
    data = glob(["launch/share/**"]),
    imports = ["launch"],
    visibility = ["//visibility:public"],
    deps = [
        "@osrf_pycommon",
        "@ros2_ament_index//:ament_index_python",
        requirement("lark_parser"),
    ],
)

py_library(
    name = "launch_testing",
    srcs = glob(["launch_testing/launch_testing/**/*.py"]),
    imports = ["launch_testing"],
    visibility = ["//visibility:public"],
    deps = [
        ":launch",
        "@osrf_pycommon",
        "@ros2_ament_index//:ament_index_python",
        requirement("pytest"),
    ],
)

py_library(
    name = "launch_xml",
    srcs = glob(["launch_xml/launch_xml/**/*.py"]),
    imports = ["launch_xml"],
    visibility = ["//visibility:public"],
    deps = [
        ":launch",
    ],
)

py_library(
    name = "launch_yaml",
    srcs = glob(["launch_yaml/launch_yaml/**/*.py"]),
    imports = ["launch_yaml"],
    visibility = ["//visibility:public"],
    deps = [
        ":launch",
    ],
)
